%% Entity-relationship diagram for the Bronze (raw) layer.
%% Render: https://mermaid.live, or view on GitHub in docs/ERD.md.

erDiagram
    CUSTOMERS ||--o{ ORDERS : places
    ORDERS ||--o{ ORDER_ITEMS : contains
    PRODUCTS ||--o{ ORDER_ITEMS : "sold in"

    CUSTOMERS {
        int customer_id PK
        varchar first_name
        varchar last_name
        varchar email UK
        varchar country
        varchar city
        date signup_date
        varchar customer_segment
    }

    PRODUCTS {
        int product_id PK
        varchar product_name
        varchar category
        varchar sub_category
        numeric unit_price
        numeric unit_cost
    }

    ORDERS {
        int order_id PK
        int customer_id FK
        date order_date
        varchar order_status
        varchar payment_method
        numeric shipping_cost
    }

    ORDER_ITEMS {
        int order_item_id PK
        int order_id FK
        int product_id FK
        int quantity
        numeric unit_price
        numeric discount_pct
    }

    DATE_DIM {
        date date_key PK
        int year
        int quarter
        int month
        int day_of_week
        bool is_weekend
    }
